[gd_scene load_steps=4 format=3 uid="uid://cq7v61y1lv3j5"]

[ext_resource type="Script" uid="uid://cl1u7lr5ocggl" path="res://scripts/zombie_spawning_node.gd" id="1_imr6r"]
[ext_resource type="PackedScene" uid="uid://dox216rwfpxfw" path="res://blueprints_prefabs/zombie.tscn" id="2_nbqt5"]

[sub_resource type="SphereShape3D" id="SphereShape3D_nbqt5"]
radius = 2.375

[node name="ZombieSpawningNode" type="Node3D"]
script = ExtResource("1_imr6r")
zombie_scene = ExtResource("2_nbqt5")

[node name="SpawnCooldown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="SpawnRef" type="Node3D" parent="."]

[node name="Area3D" type="Area3D" parent="SpawnRef"]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="SpawnRef/Area3D"]
shape = SubResource("SphereShape3D_nbqt5")

[connection signal="timeout" from="SpawnCooldown" to="." method="_on_spawn_cooldown_timeout"]
